Add student and subsidy modules

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -23,11 +23,14 @@
     "Export": "Eksport",
     "Download": "Unduh",
     "Send": "Kirim",
+    "Yes": "Ya",
+    "Not": "Bukan",
 
     "Data successfully created.": "Data berhasil disimpan.",
     "Data successfully updated.": "Data berhasil diperbarui.",
     "Data successfully deleted.": "Data berhasil dihapus",
     "You have no related permission.": "And tidak memiliki hak akses terkait.",
+    "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
 
     "Home": "Beranda",
     "Dashboard": "Dasbor",
@@ -49,6 +52,18 @@
 
     "Student": "Siswa",
     "Create Student": "Tambah Siswa",
+    "Edit Student": "Edit Siswa",
+    "Student Detail": "Detail Siswa",
+    "SSP Status": "Status SSP",
+
+    "Submission of Assistance": "Pengajuan Bantuan",
+    "Subsidy": "Subsidi",
+    "Create Subsidy": "Tambah Subsidi",
+    "Edit Subsidy": "Edit Subsidi",
+    "Subsidy Detail": "Detail Subsidi",
+    "Student Starter Pack (SSP)": "Student Starter Pack (SSP)",
+    "Selected Student": "Siswa Terpilih",
+    "Student have been selected.": "Siswa sudah dipilih.",
 
     "User": "Pengguna",
     "Account": "Akun",
@@ -65,7 +80,6 @@
     "Province": "Provinsi",
     "School Year": "Tahun Ajaran",
     "NISN": "NISN",
-    "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Select": "Pilih",
     "Address": "Alamat",
     "Regency": "Kabupaten",
@@ -79,7 +93,6 @@
     "ISO Certificate": "Sertifikat ISO",
     "Mikrotik Academy": "Mikrotik Academy",
     "Headmaster Data": "Data Kepala Sekolah",
-    "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
     "Headmaster Name": "Nama Kepala Sekolah",
     "Headmaster Phone Number": "No. Handphone Kepala Sekolah",
     "Headmaster E-Mail": "E-Mail Kepala Sekolah",
@@ -94,14 +107,62 @@
     "Dealer Phone Number": "No. Handphone Dealer",
     "Dealer E-Mail": "E-Mail Dealer",
     "Requirement Document": "Dokumen Persyaratan",
-    "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
     "School Photo": "Foto Sekolah",
-    "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekalgus. Ukuran maksimal 5 MB per berkas.",
     "Other Data": "Data Lain",
     "Other": "Lainnya",
     "E-Mail": "E-Mail",
     "Generation": "Angkatan",
     "Phone Number": "No. Handphone",
+    "Gender": "Jenis Kelamin",
+    "Grade": "Kelas",
+    "Parents Data": "Data Orang Tua",
+    "Father Name": "Nama Ayah",
+    "Father Education": "Pendidikan Ayah",
+    "Father Earning": "Penghasilan Ayah",
+    "Father Earning Nominal": "Nominal Penghasilan Ayah",
+    "Mother Name": "Nama Ibu",
+    "Mother Education": "Pendidikan Ibu",
+    "Mother Earning": "Penghasilan Ibu",
+    "Mother Earning Nominal": "Nominal Penghasilan Ibu",
+    "Trustee Data": "Data Wali",
+    "Trustee Name": "Nama Wali",
+    "Trustee Education": "Pendidikan Wali",
+    "Ex: 10000000 (without dot)": "Ex: 10000000 (tanpa titik)",
+    "Additional Data": "Data Tambahan",
+    "Economy Status": "Status Ekonomi",
+    "Religion": "Agama",
+    "Blood Type": "Golongan Darah",
+    "Special Need": "Berkebutuhan Khusus",
+    "Distance to School": "Jarak ke Sekolah",
+    "Amount of Distance (km)": "Jumlah Jarak (km)",
+    "Last Diploma Number": "Nomor Ijazah Terakhir",
+    "Height (cm)": "Tinggi (cm)",
+    "Weight (kg)": "Berat (kg)",
+    "What order are you in the family?": "Anak ke-?",
+    "Number of siblings": "Jumlah Saudara",
+    "Number of Stepbrothers": "Jumlah Saudara Tiri",
+    "Number of siblings raised": "Jumlah Saudara Angkat",
+    "Date of Birth": "Tanggal Lahir",
+    "Father Address": "Alamat Ayah",
+    "Trustee Address": "Alamat Wali",
+    "Photo": "Foto",
+    "Score Data": "Data Nilai",
+    "Basic Computer": "Komputer Dasar",
+    "Intelligence": "Intelegensi",
+    "Reasoning": "Penalaran Analitis",
+    "Analogy": "Analogi",
+    "Numerical & Accuracy": "Numerik dan Ketelitian",
+    "Type": "Tipe",
+    "Submission Letter": "Surat Pengajuan",
+
+    "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
+    "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
+    "Required to use Gmail" : "Diwajibkan menggunakan Gmail",
+
+    "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
+    "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekalgus. Ukuran maksimal 5 MB per berkas.",
+    "Photo with JPG/PNG format up to 5MB.": "Foto dengan format JPG/PNG maksimum 5 MB.",
+    "File with PDF/JPG/PNG format up to 5MB.": "Berkas dengan format PDF/JPG/PNG maksimum 5 MB.",
 
     "English": "Inggris",
     "Indonesian": "Bahasa Indonesia",
