Add Training module

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -25,6 +25,8 @@
     "Send": "Kirim",
     "Yes": "Ya",
     "Not": "Bukan",
+    "Not yet": "Belum",
+    "Already": "Sudah",
 
     "Data successfully created.": "Data berhasil disimpan.",
     "Data successfully updated.": "Data berhasil diperbarui.",
@@ -64,6 +66,16 @@
     "Student Starter Pack (SSP)": "Student Starter Pack (SSP)",
     "Selected Student": "Siswa Terpilih",
     "Student have been selected.": "Siswa sudah dipilih.",
+
+    "Training": "Training",
+    "Register Training": "Daftar Training",
+    "Training Detail": "Detail Training",
+    "Commitment Letter": "Surat Komitmen",
+    "Selection Result": "Hasil Seleksi",
+    "Implementation": "Implementasi",
+    "Basic Electronics": "Elektronika Dasar",
+    "Do you have assets?": "Sudah memiliki aset?",
+    "Participant have been selected.": "Peserta sudah dipilih.",
 
     "User": "Pengguna",
     "Account": "Akun",
@@ -154,15 +166,26 @@
     "Numerical & Accuracy": "Numerik dan Ketelitian",
     "Type": "Tipe",
     "Submission Letter": "Surat Pengajuan",
+    "Registration Requirements": "Syarat Pendaftaran",
+    "Participant": "Peserta",
+    "Selected Participant": "Peserta Terpilih",
+    "Approval Code": "Approval Code",
+    "Room Type": "Tipe Ruangan",
+    "Room Size": "Ukuran Ruangan",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
     "Required to use Gmail" : "Diwajibkan menggunakan Gmail",
+    "This department is a department synchronized with ACP.": "Jurusan ini adalah jurusan yang disinkronkan dengan ACP.",
+    "Filled with AGP payment receipt number (example: MH0000001234).": "Diisi dengan nomor payment receipt AGP (contoh: MH0000001234).",
+    "Example: 5x5x5 (LxWxH)": "Contoh: 5x5x5 (PxLxT)",
+    "In accordance with the provisions of the Axioo Construction Guidelines.": "Sesuai dengan ketentuan Axioo Construction Guidelines.",
 
     "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
     "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekalgus. Ukuran maksimal 5 MB per berkas.",
     "Photo with JPG/PNG format up to 5MB.": "Foto dengan format JPG/PNG maksimum 5 MB.",
     "File with PDF/JPG/PNG format up to 5MB.": "Berkas dengan format PDF/JPG/PNG maksimum 5 MB.",
+    "File with PDF format up to 5MB.": "Berkas dengan format PDF maksimum 5 MB.",
 
     "English": "Inggris",
     "Indonesian": "Bahasa Indonesia",
