Add document controller, model, and other things

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -61,6 +61,8 @@
     "Code": "Kode",
     "Action": "Aksi",
 
+    "Document": "Dokumen",
+
     "Student": "Siswa",
     "Create Student": "Tambah Siswa",
     "Edit Student": "Edit Siswa",
