Change user's username and email restriction

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -77,6 +77,7 @@
     "Student Starter Pack (SSP)": "Student Starter Pack (SSP)",
     "Selected Student": "Siswa Terpilih",
     "Student have been selected.": "Siswa sudah dipilih.",
+    "AGP/FTP Only": "Khusus AGP/FTP",
 
     "Training": "Training",
     "Register Training": "Daftar Training",
