Add document's observer and dummy data

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -39,7 +39,7 @@
     "Data successfully created.": "Data berhasil disimpan.",
     "Data successfully updated.": "Data berhasil diperbarui.",
     "Data successfully deleted.": "Data berhasil dihapus",
-    "You have no related permission.": "And tidak memiliki hak akses terkait.",
+    "You have no related permission.": "Anda tidak memiliki hak akses terkait.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
 
     "Home": "Beranda",
