Prepare for activity module

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -69,6 +69,8 @@
     "Student Detail": "Detail Siswa",
     "SSP Status": "Status SSP",
 
+    "Activity Submission": "Pengajuan Aktivitas",
+
     "Submission of Assistance": "Pengajuan Bantuan",
     "Subsidy": "Subsidi",
     "Create Subsidy": "Tambah Subsidi",
