--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -31,6 +31,7 @@
     "Approve": "Setujui",
     "Process": "Proses",
     "Approved": "Disetujui",
+    "Add": "Tambah",
     "Are you sure you want to reject selected data?": "Anda yakin ingin menolak data terpilih?",
     "Are you sure you want to process selected data?": "Anda yakin ingin memproses data terpilih",
     "Are you sure you want to approve selected data?": "Anda yakin ingin menyetujui data terpilih?",
@@ -60,6 +61,7 @@
     "Headmaster": "Kepala Sekolah",
     "Code": "Kode",
     "Action": "Aksi",
+    "Add Photo": "Tambah Foto",
 
     "Document": "Dokumen",
 
@@ -213,6 +215,7 @@
     "Installment": "Cicilan",
     "Date": "Tanggal",
     "Remaining payment": "Pembayaran tersisa",
+    "All Categories": "Semua Kategori",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
@@ -223,7 +226,7 @@
     "In accordance with the provisions of the Axioo Construction Guidelines.": "Sesuai dengan ketentuan Axioo Construction Guidelines.",
 
     "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
-    "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekalgus. Ukuran maksimal 5 MB per berkas.",
+    "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekaligus. Ukuran maksimal 5 MB per berkas.",
     "Photo with JPG/PNG format up to 5MB.": "Foto dengan format JPG/PNG maksimum 5 MB.",
     "File with PDF/JPG/PNG format up to 5MB.": "Berkas dengan format PDF/JPG/PNG maksimum 5 MB.",
     "File with PDF format up to 5MB.": "Berkas dengan format PDF maksimum 5 MB.",
