--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -251,6 +251,8 @@
     "File with PDF/JPG/PNG format up to 5MB.": "Berkas dengan format PDF/JPG/PNG maksimum 5 MB.",
     "File with PDF format up to 5MB.": "Berkas dengan format PDF maksimum 5 MB.",
 
+    "This school has no SSP students.": "Sekolah ini tidak memiliki siswa SSP.",
+
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
     "English": "Inggris",
