--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -80,10 +80,10 @@
     "Student Detail": "Detail Siswa",
     "SSP Status": "Status SSP",
 
-    "Activity Submission": "Pengajuan Aktivitas",
-    "Create Activity Submission": "Membuat Pengajuan Aktivitas",
-    "Edit Activity Submission": "Edit Pengajuan Aktivitas",
-    "Activity Submission Detail": "Detail Pengajuan Aktivitas",
+    "Activity Submission": "Pengajuan Kegiatan",
+    "Create Activity Submission": "Membuat Pengajuan Kegiatan",
+    "Edit Activity Submission": "Edit Pengajuan Kegiatan",
+    "Activity Submission Detail": "Detail Pengajuan Kegiatan",
 
     "Submission of Assistance": "Pengajuan Bantuan",
     "Subsidy": "Subsidi",
@@ -235,6 +235,12 @@
     "Execution": "Pelaksanaan",
     "Until Date": "Hingga Tanggal",
     "Amount of Student": "Jumlah Siswa",
+    "Confirmation": "Konfirmasi",
+    "Attendance": "Kehadiran",
+    "Return Account Information": "Informasi Rekening Pengembalian",
+    "On Behalf of": "Atas Nama",
+    "Bank Account Number": "Nomor Rekening",
+    "Bank Name": "Nama Bank",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
@@ -244,12 +250,15 @@
     "Example: 5x5x5 (LxWxH)": "Contoh: 5x5x5 (PxLxT)",
     "In accordance with the provisions of the Axioo Construction Guidelines.": "Sesuai dengan ketentuan Axioo Construction Guidelines.",
     "This is only used for export.": "Ini hanya digunakan untuk eksport.",
+    "As per the name on the account": "Sesuai nama di rekening",
+    "No punctuation or comma or strip. 10 digits minimum.": "Tanpa tanda baca titik/koma/strip. Minimal 10 digit.",
 
     "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
     "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekaligus. Ukuran maksimal 5 MB per berkas.",
     "Photo with JPG/PNG format up to 5MB.": "Foto dengan format JPG/PNG maksimum 5 MB.",
     "File with PDF/JPG/PNG format up to 5MB.": "Berkas dengan format PDF/JPG/PNG maksimum 5 MB.",
     "File with PDF format up to 5MB.": "Berkas dengan format PDF maksimum 5 MB.",
+    "For the return process to run without problems, the photo must show the account number.": "Agar proses pengembalian berjalan tanpa masalah, foto harus menunjukkan nomor rekening.",
 
     "This school has no SSP students.": "Sekolah ini tidak memiliki siswa SSP.",
 
