--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -10,15 +10,22 @@
 	"Detail": "Detail",
     "Save": "Simpan",
     "Cancel": "Batal",
+    "Back": "Kembali",
     "Filter": "Filter",
     "Refresh": "Segarkan",
     "Delete": "Hapus",
+    "Restore": "Kembalikan",
+    "Delete Permanently": "Hapus Permanen",
+    "Bin": "Sampah",
     "Created At": "Tanggal Submit",
     "PIC": "PIC",
     "Status": "Status",
-    "Are you sure want to delete this data?": "Apa anda yakin akan menghapus data ini?",
+    "Are you sure want to delete this data?": "Apa anda yakin ingin menghapus data ini?",
+    "Are you sure want to restore this data?": "Apa anda yakin ingin mengembalikan data ini?",
+    "Are you sure want to delete permanently this data?": "Apa anda yakin ingin menghapus permanen data ini?",
     "Failed!": "Gagal!",
-    "Data cannot be deleted.": "Data tidak dapat dihapus",
+    "Data cannot be deleted.": "Data tidak dapat dihapus.",
+    "Data cannot be restored.": "Data tidak dapat dikembalikan.",
     "Please select a data..": "Silahkan pilih minimal satu data..",
     "Export": "Eksport",
     "Download": "Unduh",
@@ -36,10 +43,12 @@
     "Are you sure you want to process selected data?": "Anda yakin ingin memproses data terpilih",
     "Are you sure you want to approve selected data?": "Anda yakin ingin menyetujui data terpilih?",
     "Data cannot be updated.": "Data tidak dapat diperbarui.",
+    "After this, data cannot be restored.": "Setelah ini, data tidak dapat dikembalikan.",
 
     "Data successfully created.": "Data berhasil disimpan.",
     "Data successfully updated.": "Data berhasil diperbarui.",
     "Data successfully deleted.": "Data berhasil dihapus",
+    "Data successfully restored.": "Data berhasil dikembalikan.",
     "You have no related permission.": "Anda tidak memiliki hak akses terkait.",
     "This action is unauthorized.": "Tindakan ini tidak sah.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
@@ -112,6 +121,16 @@
 
     "Exam Readiness": "Kesiapan Ujian",
     "Create Exam Readiness": "Membuat Kesiapan Ujian",
+
+    "Confirmation": "Konfirmasi",
+    "Attendance": "Kehadiran",
+    "Audience": "Audiensi",
+    "Visitation": "Visitasi",
+    "Attendance Confirmation": "Konfirmasi Kehadiran",
+    "Create Attendance Confirmation": "Membuat Konfirmasi Kehadiran",
+    "Edit Attendance Confirmation": "Edit Konfirmasi Kehadiran",
+    "Attendance Confirmation Detail": "Detail Konfirmasi Kehadiran",
+    "Deleted Attendance Confirmation": "Konfirmasi Kehadiran Terhapus",
 
     "Payment Confirmation": "Konfirmasi Pembayaran",
     "Payment": "Pembayaran",
@@ -240,13 +259,16 @@
     "Execution": "Pelaksanaan",
     "Until Date": "Hingga Tanggal",
     "Amount of Student": "Jumlah Siswa",
-    "Confirmation": "Konfirmasi",
-    "Attendance": "Kehadiran",
     "Return Account Information": "Informasi Rekening Pengembalian",
     "On Behalf of": "Atas Nama",
     "Bank Account Number": "Nomor Rekening",
     "Bank Name": "Nama Bank",
     "Position": "Jabatan",
+    "Destination": "Tujuan",
+    "Transportation": "Transportasi",
+    "Arrival Information": "Informasi Kedatangan",
+    "Arrival Point": "Titik Kedatangan",
+    "Return Information": "Informasi Kepulangan",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
