Finish exam readiness module on admin guard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -123,6 +123,9 @@
 
     "Exam Readiness": "Kesiapan Ujian",
     "Create Exam Readiness": "Membuat Kesiapan Ujian",
+    "Edit Exam Readiness": "Edit Kesiapan Ujian",
+    "Detail Exam Readiness": "Detail Kesiapan Ujian",
+    "Deleted Exam Readiness": "Kesiapan Ujian Terhapus",
 
     "Confirmation": "Konfirmasi",
     "Attendance": "Kehadiran",
