Add trash bin for school data

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -74,6 +74,7 @@
     "Code": "Kode",
     "Action": "Aksi",
     "Add Photo": "Tambah Foto",
+    "Deleted School": "Sekolah Terhapus",
 
     "Document": "Dokumen",
     "Add Document": "Tambah Dokumen",
