Fix permission bug on default guard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -54,6 +54,9 @@
     "You have no related permission.": "Anda tidak memiliki hak akses terkait.",
     "This action is unauthorized.": "Tindakan ini tidak sah.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
+    "To complete this submission, please complete the payment.": "Untuk menyelesaikan pengajuan ini, silahkan lengkapi pembayaran.",
+    "To complete this registration, please complete payment.": "Untuk menyelesaikan pendaftaran ini, silahkan lengkapi pembayaran.",
+    "Please wait for our approval for this submission.": "Silahkan tunggu persetujuan dari kami untuk pengajuan ini.",
 
     "Home": "Beranda",
     "Dashboard": "Dasbor",
