--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -32,6 +32,7 @@
     "Download": "Unduh",
     "Send": "Kirim",
     "Yes": "Ya",
+    "No": "Tidak",
     "Not": "Bukan",
     "Not yet": "Belum",
     "Cancel": "Batal",
@@ -40,6 +41,8 @@
     "Approve": "Setujui",
     "Process": "Proses",
     "Approved": "Disetujui",
+    "Opened": "Terbuka",
+    "Closed": "Tertutup",
     "Add": "Tambah",
     "Are you sure you want to reject selected data?": "Anda yakin ingin menolak data terpilih?",
     "Are you sure you want to process selected data?": "Anda yakin ingin memproses data terpilih",
@@ -111,6 +114,7 @@
     "Create Activity Submission": "Membuat Pengajuan Kegiatan",
     "Edit Activity Submission": "Edit Pengajuan Kegiatan",
     "Activity Submission Detail": "Detail Pengajuan Kegiatan",
+    "Activity": "Aktivitas",
 
     "Submission of Assistance": "Pengajuan Bantuan",
     "Subsidy": "Subsidi",
@@ -179,6 +183,9 @@
     "Role permission settings, such as manage data, CRUD, and approval.": "Pengaturan izin peran, seperti mengelola data, CRUD, dan persetujuan.",
     "Form": "Formulir",
     "Form settings, such as open or close the form.": "Pengaturan formulir, seperti membuka atau menutup formulir.",
+    "Form Settings": "Pengaturan Formulir",
+    "All About Form Settings": "Semua Pengaturan Formulir",
+    "You can adjust all form settings here": "Anda dapat mengubah semua pengaturan formulir disini.",
     "Training settings, such as quota limit, and payment nominal.": "Pengaturan pelatihan, seperti batas kuota, dan nominal pembayaran.",
     "Exam readiness settings, such as reference school.": "Pengaturan kesiapan ujian, seperti sekolah referensi.",
 
@@ -319,6 +326,13 @@
     "All Department": "Semua Jurusan",
     "Overview": "Peninjauan",
     "Organize and adjust all settings about this site.": "Atur dan sesuaikan semua pengaturan tentang situs ini.",
+    "Are there any restrictions?": "Apa ada pembatasan?",
+    "None": "Tidak Ada",
+    "Quota": "Kuota",
+    "Datetime": "Waktu",
+    "Both": "Keduanya",
+    "Limiter": "Pembatas",
+    "Limitation": "Pembatasan",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
