--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -57,6 +57,7 @@
     "Data successfully restored.": "Data berhasil dikembalikan.",
     "You have no related permission.": "Anda tidak memiliki hak akses terkait.",
     "This action is unauthorized.": "Tindakan ini tidak sah.",
+    "All settings have been successfully saved.": "Semua pengaturan telah berhasil disimpan.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
     "To complete this submission, please complete the payment.": "Untuk menyelesaikan pengajuan ini, silahkan lengkapi pembayaran.",
     "To complete this registration, please complete payment.": "Untuk menyelesaikan pendaftaran ini, silahkan lengkapi pembayaran.",
@@ -192,6 +193,9 @@
     "You can adjust all form settings here": "Anda dapat mengubah semua pengaturan formulir disini.",
     "Training settings, such as quota limit, and payment nominal.": "Pengaturan pelatihan, seperti batas kuota, dan nominal pembayaran.",
     "Exam readiness settings, such as reference school.": "Pengaturan kesiapan ujian, seperti sekolah referensi.",
+    "Exam Readiness Settings": "Pengaturan Kesiapan Ujian",
+    "All About Exam Readiness Settings": "Semua Pengaturan Kesiapan Ujian",
+    "You can adjust all exam readiness settings here": "Anda dapat mengubah semua pengaturan kesiapan ujian disini.",
 
     "Copyright": "Hak Cipta",
 
@@ -346,6 +350,9 @@
     "Second PIC Data": "Data PIC Kedua",
     "PIC 1 Data": "Data PIC 1",
     "PIC 2 Data": "Data PIC 2",
+    "Student Year": "Tahun Siswa",
+    "SSP Student Only?": "Hanya siswa SSP?",
+    "Department Limiter": "Terbatas Untuk Jurusan",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
