Add training setting implementation

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -377,6 +377,7 @@
     "Thank you! Your registration has been successful. Please check your email for the next step.": "Terima kasih! Pendaftaran anda sudah berhasil. Silahkan cek email untuk langkah selanjutnya.",
     "You must determine the department to be implemented and the second PIC.": "Anda harus menentukan jurusan yang akan diimplementasikan dan PIC kedua.",
     "Requirements for Join": "Persyaratan untuk bergabung",
+    "Payment confirmation past due.": "Konfirmasi pembayaran melebihi batas waktu.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
