Add school status and FTP into admin dashboard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -41,6 +41,9 @@
     "Approve": "Setujui",
     "Process": "Proses",
     "Approved": "Disetujui",
+    "Paid": "Lunas",
+    "Expired": "Kadaluarsa",
+    "Rejected": "Ditolak",
     "Opened": "Terbuka",
     "Closed": "Tertutup",
     "Add": "Tambah",
@@ -353,6 +356,9 @@
     "Student Year": "Tahun Siswa",
     "SSP Student Only?": "Hanya siswa SSP?",
     "Department Limiter": "Terbatas Untuk Jurusan",
+    "Candidate": "Calon",
+    "Submission": "Daftar",
+    "School FTP": "FTP Sekolah",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
