Fix data listing on admin dashboard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -359,6 +359,7 @@
     "Candidate": "Calon",
     "Submission": "Daftar",
     "School FTP": "FTP Sekolah",
+    "View All": "Lihat Semua",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
