Optimize training setting implementation and other bug fix

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -387,6 +387,10 @@
     "You must determine the department to be implemented and the second PIC.": "Anda harus menentukan jurusan yang akan diimplementasikan dan PIC kedua.",
     "Requirements for Join": "Persyaratan untuk bergabung",
     "Payment confirmation past due.": "Konfirmasi pembayaran melebihi batas waktu.",
+    "Your school does not meet the requirements and / or quota already full.": "Sekolah anda tidak memenuhi persyaratan dan / atau kuota sudah penuh.",
+    "Quota is full.": "Kuota sudah penuh.",
+    "Your school does not meet the requirements and / or registration time is up.": "Sekolah anda tidak memenuhi persyaratan dan / atau waktu pendaftaran sudah habis.",
+    "Registration time is up.": "Waktu pendaftaran sudah habis.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
