Fix some bug on training settings gate

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -391,6 +391,7 @@
     "Quota is full.": "Kuota sudah penuh.",
     "Your school does not meet the requirements and / or registration time is up.": "Sekolah anda tidak memenuhi persyaratan dan / atau waktu pendaftaran sudah habis.",
     "Registration time is up.": "Waktu pendaftaran sudah habis.",
+    "Please try again at ": "Silahkan coba lagi pada pukul ",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
