Optimize settings page

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -195,6 +195,9 @@
     "All About Form Settings": "Semua Pengaturan Formulir",
     "You can adjust all form settings here": "Anda dapat mengubah semua pengaturan formulir disini.",
     "Training settings, such as quota limit, and payment nominal.": "Pengaturan pelatihan, seperti batas kuota, dan nominal pembayaran.",
+    "Training Settings": "Pengaturan Training",
+    "All About Training Settings": "Semua Pengaturan Training",
+    "You can adjust all training settings here": "Anda dapat mengubah semua pengaturan training disini.",
     "Exam readiness settings, such as reference school.": "Pengaturan kesiapan ujian, seperti sekolah referensi.",
     "Exam Readiness Settings": "Pengaturan Kesiapan Ujian",
     "All About Exam Readiness Settings": "Semua Pengaturan Kesiapan Ujian",
@@ -361,6 +364,10 @@
     "School FTP": "FTP Sekolah",
     "View All": "Lihat Semua",
     "Change date": "Ubah tanggal",
+    "Prices": "Harga",
+    "Default (2 Participant)": "Default (2 Peserta)",
+    "Additional Price (Per Participant)": "Harga Tambahan (Per Peserta)",
+    "Prices outside the conditions": "Harga diluar ketentuan",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
