--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -174,6 +174,14 @@
     "Edit Account": "Edit Akun",
     "Account Detail": "Detail Akun",
 
+    "Update": "Perbarui",
+    "Update Data": "Perbarui Data",
+    "Update school related data.": "Perbarui data terkait sekolah.",
+    "Update multiple school status data.": "Perbarui beberapa data status sekolah.",
+    "Status Update": "Perbarui Status",
+    "School have been selected.": "Sekolah sudah dipilih.",
+    "Selected Schools": "Sekolah Terpilih",
+
     "Setting": "Pengaturan",
     "Change Setting": "Ubah Pengaturan",
     "General": "Umum",
@@ -368,6 +376,7 @@
     "Default (2 Participant)": "Default (2 Peserta)",
     "Additional Price (Per Participant)": "Harga Tambahan (Per Peserta)",
     "Prices outside the conditions": "Harga diluar ketentuan",
+    "Choose School": "Pilih Sekolah",
 
     "Enter phone number without country code.": "Masukkan nomor handphone tanpa kode negara.",
     "Complete with an academic degree and or degree of expertise.": "Lengkapi dengan gelar akademi atau keahlian.",
