show all reuired input while limiter change, change role for id translate to 'peran'

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -184,9 +184,9 @@
     "Site Settings": "Pengaturan Situs",
     "Role": "Peran",
     "Account role settings, such as supersu, admin, and user.": "Pengaturan peran akun, seperti supersu, admin, dan pengguna.",
-    "All About Role Settings": "Semua Pengaturan Rol",
-    "You can adjust all role settings here": "Anda dapat mengubah semua pengaturan rol disini.",
-    "Role Settings": "Pengaturan Rol",
+    "All About Role Settings": "Semua Pengaturan Peran",
+    "You can adjust all role settings here": "Anda dapat mengubah semua pengaturan peran disini.",
+    "Role Settings": "Pengaturan Peran",
     "Permission": "Izin Akses",
     "Role permission settings, such as manage data, CRUD, and approval.": "Pengaturan izin peran, seperti mengelola data, CRUD, dan persetujuan.",
     "Form": "Formulir",
