Add message for training validation

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -408,6 +408,7 @@
     "Your school does not meet the requirements and / or registration time is up.": "Sekolah anda tidak memenuhi persyaratan dan / atau waktu pendaftaran sudah habis.",
     "Registration time is up.": "Waktu pendaftaran sudah habis.",
     "Please try again at ": "Silahkan coba lagi pada pukul ",
+    "Your school does not meet the requirements and / or do not have teachers.": "Sekolah anda tidak memenuhi persyaratan dan / atau tidak memiliki guru.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
