--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -409,6 +409,7 @@
     "Registration time is up.": "Waktu pendaftaran sudah habis.",
     "Please try again at ": "Silahkan coba lagi pada pukul ",
     "Your school does not meet the requirements and / or do not have teachers.": "Sekolah anda tidak memenuhi persyaratan dan / atau tidak memiliki guru.",
+    "Your school does not meet the requirements and / or has not added teachers to the system.": "Sekolah anda tidak memenuhi persyaratan dan atau belum menambahkan guru ke sistem.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
 
